# nexus-ai

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
blog/: how-i-built-an-ai-agent-for-microservices.md  medium-version.md
data/: allowed_hosts.json  mcp.json  service_catalog.json  swagger_sources.json
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ChatInput.tsx  EvidencePanel.tsx  Header.tsx  MessageBubble.tsx
migrations/: 001_init.sql
src/nexus_ai/: __init__.py  config.py  main.py
src/nexus_ai/agent/: __init__.py  logging.py  orchestrator.py  redaction.py
src/nexus_ai/api/: admin.py  auth.py  chat.py  health.py  tools_test.py
src/nexus_ai/collectors/: confluence.py  db_schema.py  dependency_mapper.py  postman_bruno.py  service_catalog.py  swagger.py
src/nexus_ai/db/: neo4j.py  postgres.py  schema.py
src/nexus_ai/mcp_client/: manager.py
src/nexus_ai/tools/: __init__.py  db_tools.py  embeddings.py  graph_tools.py  impact_tools.py  jira_tools.py  live_api.py  mcp_http_tools.py  registry.py  search_tools.py
tests/: test_redaction.py  test_tools.py
