[project]
name = "nexus-ai"
version = "0.1.0"
description = "Enterprise Intelligence Agent — ask the enterprise anything. AI agent with knowledge graph, semantic search, live DB/API tools, and MCP integration."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "neo4j==5.27.0",
    "asyncpg==0.30.0",
    "pgvector==0.3.6",
    "httpx==0.28.1",
    "openai==1.58.1",
    "pydantic>=2.11.0,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "pyyaml==6.0.2",
    "python-dotenv==1.0.1",
    "sse-starlette>=3.0.0",
    "mcp==2.0.0b2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "httpx==0.28.1",
    "ruff==0.8.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus_ai"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
